# Solar-IoT-Solution

./: .gitignore  README.md
esp-node/: sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
esp-node/main/: ble_gatt.c  ble_gatt.h  eeprom_parser.c  eeprom_parser.h  idf_component.yml  main.c  mppt_ble.c  mppt_ble.h  mppt_publish.c  mppt_publish.h  proto_builder.c  settings_parser.c  settings_parser.h  space_parser.c
esp_node/: mppt.proto  platformio.ini
esp_node/include/: ble_transport.cpp  ble_transport.h  main.cpp  proto_builder.h  space_parser.h
esp_node/src/: main.cpp  mppt.pb.c  parser.cpp.patch  proto_builder.cpp  space_parser.cpp
idf/esp-node/: CMakeLists.txt  sdkconfig.defaults
idf/esp-node/main/: CMakeLists.txt  ble_gatt.c  ble_gatt.h  ble_transport.cpp  ble_transport.h  bleprph.h  constants.h  gatt_svr.c  gatt_svr.cpp  gatt_svr.h  idf_component.yml  main.c  main.cpp  main.cpp.arduino  mppt_ble.c  mppt_ble.h  mppt_publish.cpp  mppt_publish.h  proto_builder.c  proto_builder.cpp  proto_builder.h  space_parser.c  space_parser.cpp  space_parser.h
mppt-stack/: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
mppt-stack/nodered/: Dockerfile  devices.json  flows.json  flows_cred.json  mppt.proto  package.json  settings.js
parser/: Makefile  Makefile_json  README.md  compile_commands.json
parser/include/: constants.h  eeprom_parser.h  json_builder.h  lookups.h  mqtt_client.h  printer.h  (+6 more)
proto/: __init__.py  mppt.proto
rpi/: requirements.txt  rpi_ble_gateway.py
(+19 files in other folders)
